opam-version: "2.0"
name: "flask"
version: "~dev"
synopsis: "Persistent key-value storage"
maintainer: "Vlad Lopalo"
authors: "Vlad Lopalo"
depends: [
  "dune" {>= "1.11.4"}
  "ocaml-base-compiler" {= "4.10.0"}

  "conf-libev" {= "4-11"}
  "lwt" {= "5.3.0"}
  "lwt_ppx" {= "2.0.1"}
  "angstrom-lwt-unix" {= "0.14.1"}
  "lru" {= "0.3.0"}
  "logs" {= "0.7.0"}

  "alcotest-lwt" {= "1.2.3"}

  "merlin" {>= "3.3.2"}
  "ocamlformat" {>= "0.11.0"}
  "utop" {>= "2.4.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
